--- a/Processadores.html
+++ b/Processadores.html
@@ -889,7 +889,7 @@
 
                 <div class="showcase-banner">
 
-                  <img src="./assets/images/Produts grid/i3.jpg" alt="Processador i3-10100F" width="100" class="product-img default">
+                  <img src="./assets/images/Produts grid/I3.jpg" alt="Processador i3-10100F" width="100" class="product-img default">
                   <img src="./assets/images/Produts grid/i3-2.jpg" alt="Processador i3-10100F" width="100" class="product-img hover">
 
 
