--- a/Placa.html
+++ b/Placa.html
@@ -106,7 +106,7 @@
       <div class="container">
 
         <a href="index.html" class="header-logo">
-          <img src="./assets/images/logo/SmartShop.png" alt="Anon's logo" width="170">
+          <img src="./assets/images/logo/SmartShop.png" alt="SmartShop logo" width="200">
         </a>
 
         <div class="header-search-container">
@@ -149,7 +149,7 @@
         <ul class="desktop-menu-category-list">
 
           <li class="menu-category">
-            <a href="#" class="menu-title">Inicio</a>
+            <a href="index.html" class="menu-title">Inicio</a>
           </li>
 
           <li class="menu-category">
