--- a/Processadores.html
+++ b/Processadores.html
@@ -106,7 +106,7 @@
       <div class="container">
 
         <a href="index.html" class="header-logo">
-          <img src="./assets/images/logo/SmartShop.png" alt="Anon's logo" width="170">
+          <img src="./assets/images/logo/SmartShop.png" alt="SmartShop logo" width="200">
         </a>
 
         <div class="header-search-container">
@@ -834,10 +834,10 @@
               <div class="showcase">
 
                 <div class="showcase-banner">
-
-                  <img src="./assets/images/Produts grid/i9.jpg" alt="Processador i9-13900" width="100" class="product-img default">
-                  <img src="./assets/images/Produts grid/i9-2.jpg" alt="Processador i9-13900" width="100" class="product-img hover">
-
+                  <a href="./Processador I9.html" target="_blank" rel="noopener noreferrer">
+                    <img src="./assets/images/Produts grid/i9.jpg" alt="Processador i9-13900" width="100" class="product-img default">
+                    <img src="./assets/images/Produts grid/i9-2.jpg" alt="Processador i9-13900" width="100" class="product-img hover">
+                  </a>
 
                   <div class="showcase-actions">
 
@@ -865,7 +865,7 @@
 
                   <a href="#" class="showcase-category">Processadores</a>
 
-                  <a href="#">
+                  <a href="Processador I9.html">
                     <h3 class="showcase-title">Processador Intel Core i9-13900</h3>
                   </a>
 
@@ -1101,9 +1101,9 @@
               <div class="showcase">
               
                 <div class="showcase-banner">
-                  <img src="./assets/images/Produts grid/amd7.jpg" alt="Processador AMD Ryzen 9 5900XT" class="product-img default"
+                  <img src="./assets/images/Produts grid/amd9.jpg" alt="Processador AMD Ryzen 9 5900XT" class="product-img default"
                     width="300">
-                  <img src="./assets/images/Produts grid/amd7-2.jpg" alt="Processador AMD Ryzen 9 5900XT" class="product-img hover"
+                  <img src="./assets/images/Produts grid/amd9-2.jpg" alt="Processador AMD Ryzen 9 5900XT" class="product-img hover"
                     width="300">
 
                   <p class="showcase-badge angle black">Oferta</p>        
