--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <div class="container">
 
         <a href="#" class="header-logo">
-          <img src="./assets/images/logo/SmartShop.png" alt="Anon's logo" width="170">
+          <img src="./assets/images/logo/SmartShop.png" alt="SmartShop Logo" width="200">
         </a>
 
         <div class="header-search-container">
@@ -249,7 +249,7 @@
                 </li>
 
                 <li class="panel-list-item">
-                  <a href="#">Placa Mãe</a>
+                  <a href="Placa.html">Placa Mãe</a>
                 </li>
 
                 <li class="panel-list-item">
@@ -1071,7 +1071,7 @@
                       <a href="#" class="showcase-category">Hardware</a>
             
                       <div class="price-box">
-                        <p class="price">R$ 1,500,00</p>
+                        <p class="price">R$ 1.500,00</p>
                         <del>R$ 2.500,00</del>
                       </div>
             
