Fix page product

--- a/Processador I9.html
+++ b/Processador I9.html
@@ -93,7 +93,7 @@
         <ul class="product__thumbs default-container" aria-label="Product thumbnails">
           <li class="thumb-item">
             <button type="button" class="thumb-item__btn" aria-label="change to image 1">
-              <img src="assets/images/I9 Frente.'svg'" alt="" data-thumb-index="0" role="presentation">
+              <img src="assets/images/I9 Frente.svg" alt="" data-thumb-index="0" role="presentation">
             </button>
           </li>
           <li class="thumb-item">
