Fix and add page product

--- a/Processador I9.html
+++ b/Processador I9.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/android-chrome-192x192.png">
-  <link rel="stylesheet" href="/assets/css/Processador I9-2.css">
-  <link rel="stylesheet" href="/assets/css/Processador I9.css">
-  <script src="assets/js/products.js"></script>
+  <link rel="icon" type="image/png" sizes="32x32" href=".assets/images/android-chrome-192x192.png">
+  <link rel="stylesheet" href="./assets/css/Processador I9-2.css">
+  <link rel="stylesheet" href="./assets/css/Processador I9.css">
   <script src="assets/js/cart.js"></script>
   <script src="assets/js/focusable-lightbox.js"></script>
   <script src="assets/js/main.js" defer></script>
@@ -20,7 +19,9 @@
         <img src="assets/images/icon-menu.svg" alt="" role="presentation">
       </button>
       <div class="logo_conteiner">
+        <a href="index.html">
         <img src="./assets/images/SmartShop.png" alt="" class="logo">
+        </a>
       </div>
         <nav class="main-nav" id="main-nav" aria-label="Main menu">
           <div class="main-nav__content-container">
@@ -30,19 +31,19 @@
             </button>
             <ul class="main-nav__links">
               <li>
-                <a href="#" class="nav-item">Collections</a>
+                <a href="index.html" class="nav-item">Inicio</a>
               </li>
               <li>
-                <a href="#" class="nav-item">Men</a>
+                <a href="#" class="nav-item">Eletronicos</a>
               </li>
               <li>
-                <a href="#" class="nav-item">Women</a>
+                <a href="#" class="nav-item">Notebooks e Portáteis</a>
               </li>
               <li>
-                <a href="#" class="nav-item">About</a>
+                <a href="#" class="nav-item">Redes e Wireless</a>
               </li>
               <li>
-                <a href="#" class="nav-item">Contact</a>
+                <a href="#" class="nav-item">Realidade Virtual</a>
               </li>
             </ul>
           </div>
@@ -93,12 +94,12 @@
         <ul class="product__thumbs default-container" aria-label="Product thumbnails">
           <li class="thumb-item">
             <button type="button" class="thumb-item__btn" aria-label="change to image 1">
-              <img src="assets/images/I9 Frente.svg" alt="" data-thumb-index="0" role="presentation">
+              <img src="./assets/images/I9 Frente.svg" alt="" data-thumb-index="0" role="presentation">
             </button>
           </li>
           <li class="thumb-item">
             <button type="button" class="thumb-item__btn" aria-label="change to image 2">
-              <img src="assets/images/I9 Lado.svg" alt="" data-thumb-index="1" role="presentation">
+              <img src="./assets/images/I9 Lado.svg" alt="" data-thumb-index="1" role="presentation">
             </button>
           </li>
         </ul>
@@ -111,7 +112,7 @@
         </header>
         <p class="product__description" tabindex="0">
           Os processadores para desktop Intel Core i9 da 13ª Geração são otimizados para jogadores entusiastas 
-          e criadores profissionais que ajudam a oferecer entregas de alto desempenho
+          e criadores profissionais que ajudam a oferecer entregas de alto desempenho.
         </p>
         <div class="product__price">
           <div class="discount-price">
