--- a/Processadores.html
+++ b/Processadores.html
@@ -834,7 +834,7 @@
               <div class="showcase">
 
                 <div class="showcase-banner">
-                  <a href="./Processador I9.html" target="_blank" rel="noopener noreferrer">
+                  <a href="./Processador I9.html" rel="noopener noreferrer">
                     <img src="./assets/images/Produts grid/i9.jpg" alt="Processador i9-13900" width="100" class="product-img default">
                     <img src="./assets/images/Produts grid/i9-2.jpg" alt="Processador i9-13900" width="100" class="product-img hover">
                   </a>
